# doc2md

./: .gitignore  PLAN.md  README.md  docling.md  pyproject.toml
docs/: index.md  libdoc-click.md  libdoc-docling.md  libdoc-reportlab.md  libdoc-toml.md  libdoc-torchvision.md
src/doc2md/: __init__.py  cli.py  converter.py  utils.py
tests/: test_character_fixing.py  test_cli.py  test_complex_document.py  test_converter.py  test_integration.py  test_sample_pdf.py  test_smushed_text.py  test_utils.py  test_utils_math.py
